# nbopen

./: .gitignore  LICENSE  README.rst  application-x-ipynb+json.xml  flit.ini  nbopen  nbopen.desktop  nbopen.py  osx-install.sh  osx-make-iconset.sh  py2app_setup.py  pyproject.toml  setup.py  text-x-ipynb.xml  win-install.py  xdg-install.sh
nbopen/: __init__.py  __main__.py  install_win.py  install_xdg.py  nbopen.desktop  nbopen.py
